Add CachedJsonPoller